--- a/src/pages/hikvision.astro
+++ b/src/pages/hikvision.astro
@@ -11,73 +11,73 @@ interface Props {
 const descriptions: string =
   "Hikvision wholesale dealer in UAE offering top-quality CCTV cameras, access control, and security solutions at unbeatable prices. Contact us for bulk pricing";
 
-  const structuredData =  {
+const structuredData = {
   "@context": "https://schema.org",
   "@graph": [
     {
       "@type": "Organization",
       "@id": "https://lovosis.com/#organization",
-      "name": "lovosis.com",
-      "url": "https://lovosis.com",
-      "logo": {
+      name: "lovosis.com",
+      url: "https://lovosis.com",
+      logo: {
         "@type": "ImageObject",
         "@id": "https://lovosis.com/#logo",
-        "url": "https://lovosis.com/pictures/logo.png",
-        "contentUrl": "https://lovosis.com/pictures/logo.png",
-        "caption": "lovosis.com",
-        "inLanguage": "en",
-        "width": "1666",
-        "height": "167"
+        url: "https://lovosis.com/pictures/logo.png",
+        contentUrl: "https://lovosis.com/pictures/logo.png",
+        caption: "lovosis.com",
+        inLanguage: "en",
+        width: "1666",
+        height: "167",
       },
-      "email": "sales@lovosis.com",
-      "telephone": "+971509162488",
-      "address": {
+      email: "sales@lovosis.com",
+      telephone: "+971509162488",
+      address: {
         "@type": "PostalAddress",
-        "streetAddress": "Satellite Market Naif Deira,Baghlaf Building Showroom No.5",
-        "addressLocality": "Dubai",
-        "addressCountry": "AE",
-        "addressRegion": "Dubai,United Arab Emirates",
-        "postalCode": "123421"
+        streetAddress:
+          "Satellite Market Naif Deira,Baghlaf Building Showroom No.5",
+        addressLocality: "Dubai",
+        addressCountry: "AE",
+        addressRegion: "Dubai,United Arab Emirates",
+        postalCode: "123421",
       },
     },
     {
       "@type": "WebSite",
       "@id": "https://lovosis.com/#website",
-      "url": "https://lovosis.com",
-      "name": "Lovosis.com",
-      "publisher": {
-        "@id": "https://lovosis.com/#organization"
+      url: "https://lovosis.com",
+      name: "Lovosis.com",
+      publisher: {
+        "@id": "https://lovosis.com/#organization",
       },
-      "inLanguage": "en",
-       },
+      inLanguage: "en",
+    },
     {
       "@type": "ImageObject",
       "@id": "https://lovosis.com/pictures/hik.png",
-      "url": "https://lovosis.com/pictures/hik.png",
-      "width": "200",
-      "height": "200",
-      "inLanguage": "en"
+      url: "https://lovosis.com/pictures/hik.png",
+      width: "200",
+      height: "200",
+      inLanguage: "en",
     },
     {
       "@type": "WebPage",
       "@id": "https://lovosis.com/#webpage",
-      "url": "https://lovosis.com/hikvision",
-      "name": "Hikvision wholesale dealer in U.A.E",
-      "datePublished": "2023-08-26T06:58:56+01:00",
-      "dateModified": "2025-01-23T11:04:48+00:00",
-      "isPartOf": {
-        "@id": "https://lovosis.com/#website"
+      url: "https://lovosis.com/hikvision",
+      name: "Hikvision wholesale dealer in U.A.E",
+      datePublished: "2023-08-26T06:58:56+01:00",
+      dateModified: "2025-01-23T11:04:48+00:00",
+      isPartOf: {
+        "@id": "https://lovosis.com/#website",
       },
-      "primaryImageOfPage": {
-        "@id": "https://lovosis.com/pictures/hik.png"
+      primaryImageOfPage: {
+        "@id": "https://lovosis.com/pictures/hik.png",
       },
-      "inLanguage": "en"
+      inLanguage: "en",
     },
-   
-
-  ]
-}
+  ],
+};
 ---
+
 <style>
   .autoRotate {
     animation: autoRotateAnimation;
@@ -414,74 +414,78 @@ const descriptions: string =
     <div
       class="mb-20 rounded-2xl bg-gray-100 p-5 text-center dark:bg-neutral-500 md:p-12"
     >
-      <div class="bg-gray-100 py-5">
-        <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-          <div class="lg:text-center">
-            <p class="max-w-2xl text-xl text-gray-500 lg:mx-auto">
-              Get in touch with us for any inquiries, collaborations, or
-              support. We're here to assist and answer your questions!
-            </p>
-          </div>
+      <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+        <div class="lg:text-center">
+          <p
+            class="max-w-2xl text-xl text-gray-500 dark:text-neutral-300 lg:mx-auto"
+          >
+            Get in touch with us for any inquiries, collaborations, or support.
+            We're here to assist and answer your questions!
+          </p>
+        </div>
 
-          <div class="mt-10">
-            <dl
-              class="items-center justify-center space-y-10 md:grid md:grid-cols-2 md:gap-x-8 md:gap-y-10 md:space-y-0"
-            >
-              <div class="flex">
-                <div class="flex-shrink-0">
-                  <div
-                    class="flex h-12 w-12 items-center justify-center rounded-md bg-indigo-500 text-white"
+        <div class="mt-10">
+          <dl
+            class="items-center justify-center space-y-10 md:grid md:grid-cols-2 md:gap-x-8 md:gap-y-10 md:space-y-0"
+          >
+            <div class="flex">
+              <div class="flex-shrink-0">
+                <div
+                  class="flex h-12 w-12 items-center justify-center rounded-md bg-indigo-500 text-white"
+                >
+                  <!-- Heroicon name: phone -->
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="h-6 w-6"
                   >
-                    <!-- Heroicon name: phone -->
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      fill="none"
-                      viewBox="0 0 24 24"
-                      stroke-width="1.5"
-                      stroke="currentColor"
-                      class="h-6 w-6"
-                    >
-                      <path
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 002.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 01-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 00-1.091-.852H4.5A2.25 2.25 0 002.25 4.5v2.25z"
-                      ></path>
-                    </svg>
-                  </div>
-                </div>
-                <div class="ml-4">
-                  <p class="mt-2 text-base text-gray-500">+971509162488</p>
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 002.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 01-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 00-1.091-.852H4.5A2.25 2.25 0 002.25 4.5v2.25z"
+                    ></path>
+                  </svg>
                 </div>
               </div>
+              <div class="ml-4">
+                <p class="mt-2 text-base text-gray-500 dark:text-neutral-300">
+                  +971509162488
+                </p>
+              </div>
+            </div>
 
-              <div class="flex">
-                <div class="flex-shrink-0">
-                  <div
-                    class="flex h-12 w-12 items-center justify-center rounded-md bg-indigo-500 text-white"
+            <div class="flex">
+              <div class="flex-shrink-0">
+                <div
+                  class="flex h-12 w-12 items-center justify-center rounded-md bg-indigo-500 text-white"
+                >
+                  <!-- Heroicon name: mail -->
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="h-6 w-6"
                   >
-                    <!-- Heroicon name: mail -->
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      fill="none"
-                      viewBox="0 0 24 24"
-                      stroke-width="1.5"
-                      stroke="currentColor"
-                      class="h-6 w-6"
-                    >
-                      <path
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        d="M21.75 6.75v10.5a2.25 2.25 0 01-2.25 2.25h-15a2.25 2.25 0 01-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0019.5 4.5h-15a2.25 2.25 0 00-2.25 2.25m19.5 0v.243a2.25 2.25 0 01-1.07 1.916l-7.5 4.615a2.25 2.25 0 01-2.36 0L3.32 8.91a2.25 2.25 0 01-1.07-1.916V6.75"
-                      ></path>
-                    </svg>
-                  </div>
-                </div>
-                <div class="ml-4">
-                  <p class="mt-2 text-base text-gray-500">sales@lovosis.com</p>
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M21.75 6.75v10.5a2.25 2.25 0 01-2.25 2.25h-15a2.25 2.25 0 01-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0019.5 4.5h-15a2.25 2.25 0 00-2.25 2.25m19.5 0v.243a2.25 2.25 0 01-1.07 1.916l-7.5 4.615a2.25 2.25 0 01-2.36 0L3.32 8.91a2.25 2.25 0 01-1.07-1.916V6.75"
+                    ></path>
+                  </svg>
                 </div>
               </div>
-            </dl>
-          </div>
+              <div class="ml-4">
+                <p class="mt-2 text-base text-gray-500 dark:text-neutral-300">
+                  sales@lovosis.com
+                </p>
+              </div>
+            </div>
+          </dl>
         </div>
       </div>
     </div>
