--- a/src/pages/unv.astro
+++ b/src/pages/unv.astro
@@ -300,77 +300,79 @@ const structuredData = {
     <div
       class="mb-10 mt-10 rounded-2xl bg-gray-100 p-5 text-center dark:bg-neutral-500 md:p-12"
     >
-      <div class="rounded-xl bg-gray-100 py-5">
-        <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-          <div class="lg:text-center">
-            <p class="max-w-2xl text-xl text-gray-500 lg:mx-auto">
-              Get in touch with us for any inquiries, collaborations, or
-              support. We're here to assist and answer your questions!
-            </p>
-          </div>
+      <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+        <div class="lg:text-center">
+          <p
+            class="max-w-2xl text-xl text-gray-500 dark:text-neutral-300 lg:mx-auto"
+          >
+            Get in touch with us for any inquiries, collaborations, or support.
+            We're here to assist and answer your questions!
+          </p>
+        </div>
 
-          <div class="mt-10">
-            <dl
-              class="items-center justify-center space-y-10 md:grid md:grid-cols-2 md:gap-x-8 md:gap-y-10 md:space-y-0"
-            >
-              <div class="flex">
-                <div class="flex-shrink-0">
-                  <div
-                    class="flex h-12 w-12 items-center justify-center rounded-md bg-indigo-500 text-white"
+        <div class="mt-10">
+          <dl
+            class="items-center justify-center space-y-10 md:grid md:grid-cols-2 md:gap-x-8 md:gap-y-10 md:space-y-0"
+          >
+            <div class="flex">
+              <div class="flex-shrink-0">
+                <div
+                  class="flex h-12 w-12 items-center justify-center rounded-md bg-indigo-500 text-white"
+                >
+                  <!-- Heroicon name: phone -->
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="h-6 w-6"
                   >
-                    <!-- Heroicon name: phone -->
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      fill="none"
-                      viewBox="0 0 24 24"
-                      stroke-width="1.5"
-                      stroke="currentColor"
-                      class="h-6 w-6"
-                    >
-                      <path
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 002.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 01-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 00-1.091-.852H4.5A2.25 2.25 0 002.25 4.5v2.25z"
-                      ></path>
-                    </svg>
-                  </div>
-                </div>
-                <div class="ml-4">
-                  <p class="text-base text-gray-500">
-                    +971 55 946 2214<br />
-                    +971 50 998 2727
-                  </p>
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 002.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 01-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 00-1.091-.852H4.5A2.25 2.25 0 002.25 4.5v2.25z"
+                    ></path>
+                  </svg>
                 </div>
               </div>
+              <div class="ml-4">
+                <p class="text-base text-gray-500 dark:text-neutral-300">
+                  +971 55 946 2214<br />
+                  +971 50 998 2727
+                </p>
+              </div>
+            </div>
 
-              <div class="flex">
-                <div class="flex-shrink-0">
-                  <div
-                    class="flex h-12 w-12 items-center justify-center rounded-md bg-indigo-500 text-white"
+            <div class="flex">
+              <div class="flex-shrink-0">
+                <div
+                  class="flex h-12 w-12 items-center justify-center rounded-md bg-indigo-500 text-white"
+                >
+                  <!-- Heroicon name: mail -->
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="h-6 w-6"
                   >
-                    <!-- Heroicon name: mail -->
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      fill="none"
-                      viewBox="0 0 24 24"
-                      stroke-width="1.5"
-                      stroke="currentColor"
-                      class="h-6 w-6"
-                    >
-                      <path
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        d="M21.75 6.75v10.5a2.25 2.25 0 01-2.25 2.25h-15a2.25 2.25 0 01-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0019.5 4.5h-15a2.25 2.25 0 00-2.25 2.25m19.5 0v.243a2.25 2.25 0 01-1.07 1.916l-7.5 4.615a2.25 2.25 0 01-2.36 0L3.32 8.91a2.25 2.25 0 01-1.07-1.916V6.75"
-                      ></path>
-                    </svg>
-                  </div>
-                </div>
-                <div class="ml-4">
-                  <p class="mt-2 text-base text-gray-500">sales@lovosis.com</p>
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M21.75 6.75v10.5a2.25 2.25 0 01-2.25 2.25h-15a2.25 2.25 0 01-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0019.5 4.5h-15a2.25 2.25 0 00-2.25 2.25m19.5 0v.243a2.25 2.25 0 01-1.07 1.916l-7.5 4.615a2.25 2.25 0 01-2.36 0L3.32 8.91a2.25 2.25 0 01-1.07-1.916V6.75"
+                    ></path>
+                  </svg>
                 </div>
               </div>
-            </dl>
-          </div>
+              <div class="ml-4">
+                <p class="mt-2 text-base text-gray-500 dark:text-neutral-300">
+                  sales@lovosis.com
+                </p>
+              </div>
+            </div>
+          </dl>
         </div>
       </div>
     </div>
