--- a/src/components/sections/features/FeaturesGeneral.astro
+++ b/src/components/sections/features/FeaturesGeneral.astro
@@ -2,7 +2,7 @@
 import { Image } from "astro:assets";
 import IconBlock from "@components/ui/blocks/IconBlock.astro";
 import Icon from "@components/ui/icons/Icon.astro";
-import PP from "@components/sections/features/overlay.astro"
+import PP from "@components/sections/features/overlay.astro";
 
 interface Feature {
   heading: string;
@@ -18,47 +18,38 @@ interface Props {
   alt?: string;
 }
 
-const { title, subTitle,} = Astro.props;
-
-
-
+const { title, subTitle } = Astro.props;
 ---
 
 <section
   class="mx-auto max-w-[85rem] px-4 py-4 sm:px-6 lg:px-8 lg:py-6 2xl:max-w-full"
 >
-
   <div class="mx-auto mb-12 w-full space-y-1 text-center sm:w-1/2 lg:w-1/3">
     <h2
-      class="text-balance md:text-8xl text-5xl autoBLur font-bold leading-tight text-neutral-800 dark:text-neutral-200 sm:text-3xl fade-in-up"
+      class="autoBLur fade-in-up text-balance text-5xl font-bold leading-tight text-neutral-800 dark:text-neutral-200 sm:text-3xl md:text-8xl"
     >
-      Meet 
+      Meet
     </h2>
     <h2
-      class="text-balance md:text-8xl text-5xl autoBLur font-bold leading-tight text-neutral-800 dark:text-neutral-200 sm:text-3xl fade-in-up"
+      class="autoBLur fade-in-up text-balance text-5xl font-bold leading-tight text-neutral-800 dark:text-neutral-200 sm:text-3xl md:text-8xl"
     >
-      Our 
+      Our
     </h2>
     <h2
-      class="text-balance text-4xl font-bold leading-tight text-neutral-800 dark:text-neutral-200 sm:text-3xl fade-in-up"
+      class="fade-in-up text-balance text-4xl font-bold leading-tight text-neutral-800 dark:text-neutral-200 sm:text-3xl"
     >
       Brands
     </h2>
-    
   </div>
 
-
-  
   <div class="mt-5 grid gap-8 lg:mt-16 lg:grid-cols-2 lg:gap-6">
-    
-    <div class="lg:col-span-1 w-full md:w-3/4">
-      
+    <div class="w-full md:w-3/4 lg:col-span-1">
       <h2
         class="text-balance text-2xl font-bold text-neutral-800 dark:text-neutral-200 md:text-3xl"
       >
         {title}
       </h2>
-      
+
       {
         subTitle && (
           <p class="mt-2 text-pretty text-neutral-600 dark:text-neutral-400 md:mt-4">
@@ -68,12 +59,14 @@ const { title, subTitle,} = Astro.props;
       }
     </div>
 
-    
-    <div class="lg:col-span-1 mt-2 ml-5 md:-ml-28">
-      <div class="grid gap-x-2 gap-y-4 grid-cols-1 md:grid-cols-2">
-
-        <div class="relative flex h-[10em] w-[17em] md:w-[17em] items-center justify-center rounded-[1.5em] border-[1px] border-neutral-700 bg-white dark:bg-neutral-600 p-[1.5em] text-lime-300">
-          <div class="group absolute left-1/2 bottom-0 md:top-8 flex h-[2em] w-[2em] -translate-x-1/2 -translate-y-1/2 items-center justify-center overflow-hidden rounded-[1.5em] border-[1px] bg-teal-600 dark:bg-blue-600 backdrop-blur-[3px] duration-[500ms] hover:h-[10em] hover:w-[14em] hover:rounded-[1.5em]">
+    <div class="ml-5 mt-2 md:-ml-28 lg:col-span-1">
+      <div class="grid grid-cols-1 gap-x-2 gap-y-4 md:grid-cols-2">
+        <div
+          class="text-lime-300 relative flex h-[10em] w-[17em] items-center justify-center rounded-[1.5em] border-[1px] border-neutral-700 bg-white p-[1.5em] dark:bg-neutral-600 md:w-[17em]"
+        >
+          <div
+            class="group absolute bottom-0 left-1/2 flex h-[2em] w-[2em] -translate-x-1/2 -translate-y-1/2 items-center justify-center overflow-hidden rounded-[1.5em] border-[1px] bg-teal-600 backdrop-blur-[3px] duration-[500ms] hover:h-[10em] hover:w-[14em] hover:rounded-[1.5em] dark:bg-blue-600 md:top-8"
+          >
             <svg
               class="h-[1em] w-[1em] duration-300 group-hover:opacity-0"
               viewBox="0 0 48 48"
@@ -87,8 +80,7 @@ const { title, subTitle,} = Astro.props;
                   clip-rule="evenodd"
                   d="M21.6 36h4.8V21.6h-4.8V36ZM24 0C10.8 0 0 10.8 0 24s10.8 24 24 24 24-10.8 24-24S37.2 0 24 0Zm0 43.2C13.44 43.2 4.8 34.56 4.8 24 4.8 13.44 13.44 4.8 24 4.8c10.56 0 19.2 8.64 19.2 19.2 0 10.56-8.64 19.2-19.2 19.2Zm-2.4-26.4h4.8V12h-4.8v4.8Z"
                   fill-rule="evenodd"
-                  fill="#fff"
-                ></path>
+                  fill="#fff"></path>
               </g>
               <defs>
                 <clipPath id="a">
@@ -96,21 +88,34 @@ const { title, subTitle,} = Astro.props;
                 </clipPath>
               </defs>
             </svg>
-            <div class="items-left absolute left-0 top-0 flex h-auto w-full translate-y-[20%] flex-col justify-center p-3 font-poppins text-neutral-100 dark:text-neutral-100 group-hover:translate-y-0">
+            <div
+              class="items-left font-poppins absolute left-0 top-0 flex h-auto w-full translate-y-[20%] flex-col justify-center p-3 text-neutral-100 group-hover:translate-y-0 dark:text-neutral-100"
+            >
               <div class="items-left flex flex-col justify-center">
                 <p class="text-[0.9em] font-light">
-                  As a leading wholesale dealer of Dahua products, we offer an extensive range of high-quality security and surveillance solutions. 
+                  As a leading wholesale dealer of Dahua products, we offer an
+                  extensive range of high-quality security and surveillance
+                  solutions.
                 </p>
               </div>
             </div>
           </div>
-        <a href="/dahua">
-          <img src="/pictures/Dahua logo.png" alt="hero-image" class="w-full h-auto bg-cover" title="Learn more about Dahua technology">
-        </a>
+          <a href="/dahua">
+            <img
+              src="/pictures/Dahua logo.png"
+              alt="hero-image"
+              class="h-auto w-full bg-cover"
+              title="Learn more about Dahua technology"
+            />
+          </a>
         </div>
 
-        <div class="relative flex h-[10em] w-[17em] md:w-[17em] items-center justify-center rounded-[1.5em] border-[1px] border-neutral-700 bg-white dark:bg-neutral-600 p-[1.5em] text-lime-300">
-          <div class="group absolute left-1/2 bottom-0 md:top-8 flex h-[2em] w-[2em] -translate-x-1/2 -translate-y-1/2 items-center justify-center overflow-hidden rounded-[1.5em] border-[1px] bg-teal-600 dark:bg-blue-600 backdrop-blur-[3px] duration-[500ms] hover:h-[10em] hover:w-[14em] hover:rounded-[1.5em]">
+        <div
+          class="text-lime-300 relative flex h-[10em] w-[17em] items-center justify-center rounded-[1.5em] border-[1px] border-neutral-700 bg-white p-[1.5em] dark:bg-neutral-600 md:w-[17em]"
+        >
+          <div
+            class="group absolute bottom-0 left-1/2 flex h-[2em] w-[2em] -translate-x-1/2 -translate-y-1/2 items-center justify-center overflow-hidden rounded-[1.5em] border-[1px] bg-teal-600 backdrop-blur-[3px] duration-[500ms] hover:h-[10em] hover:w-[14em] hover:rounded-[1.5em] dark:bg-blue-600 md:top-8"
+          >
             <svg
               class="h-[1em] w-[1em] duration-300 group-hover:opacity-0"
               viewBox="0 0 48 48"
@@ -124,8 +129,7 @@ const { title, subTitle,} = Astro.props;
                   clip-rule="evenodd"
                   d="M21.6 36h4.8V21.6h-4.8V36ZM24 0C10.8 0 0 10.8 0 24s10.8 24 24 24 24-10.8 24-24S37.2 0 24 0Zm0 43.2C13.44 43.2 4.8 34.56 4.8 24 4.8 13.44 13.44 4.8 24 4.8c10.56 0 19.2 8.64 19.2 19.2 0 10.56-8.64 19.2-19.2 19.2Zm-2.4-26.4h4.8V12h-4.8v4.8Z"
                   fill-rule="evenodd"
-                  fill="#fff"
-                ></path>
+                  fill="#fff"></path>
               </g>
               <defs>
                 <clipPath id="a">
@@ -133,20 +137,33 @@ const { title, subTitle,} = Astro.props;
                 </clipPath>
               </defs>
             </svg>
-            <div class="items-left absolute left-0 top-0 flex h-auto w-full translate-y-[20%] flex-col justify-center p-3 font-poppins text-neutral-100 dark:text-neutral-100 group-hover:translate-y-0">
+            <div
+              class="items-left font-poppins absolute left-0 top-0 flex h-auto w-full translate-y-[20%] flex-col justify-center p-3 text-neutral-100 group-hover:translate-y-0 dark:text-neutral-100"
+            >
               <div class="items-left flex flex-col justify-center">
                 <p class="text-[0.9em] font-light">
-                  As the top wholesale seller of Hikvision products in Dubai, we offer the best prices and a vast selection of surveillance solutions from the world’s leading security cameras. 
+                  As the top wholesale seller of Hikvision products in Dubai, we
+                  offer the best prices and a vast selection of surveillance
+                  solutions from the world’s leading security cameras.
                 </p>
               </div>
             </div>
           </div>
           <a href="/hikvision">
-          <img src="/pictures/Hikvision logo.png" alt="hero-image" class="w-full h-auto bg-cover" title="Learn more about Hikvision">
-        </a>
+            <img
+              src="/pictures/Hikvision logo.png"
+              alt="hero-image"
+              class="h-auto w-full bg-cover"
+              title="Learn more about Hikvision"
+            />
+          </a>
         </div>
-        <div class="relative flex h-[10em] w-[17em] md:w-[17em] items-center justify-center rounded-[1.5em] border-[1px] border-neutral-700 bg-white dark:bg-neutral-600 p-[1.5em] text-lime-300">
-          <div class="group absolute left-1/2 bottom-0 md:top-8 flex h-[2em] w-[2em] -translate-x-1/2 -translate-y-1/2 items-center justify-center overflow-hidden rounded-[1.5em] border-[1px] bg-teal-600 dark:bg-blue-600 backdrop-blur-[3px] duration-[500ms] hover:h-[10em] hover:w-[14em] hover:rounded-[1.5em]">
+        <div
+          class="text-lime-300 relative flex h-[10em] w-[17em] items-center justify-center rounded-[1.5em] border-[1px] border-neutral-700 bg-white p-[1.5em] dark:bg-neutral-600 md:w-[17em]"
+        >
+          <div
+            class="group absolute bottom-0 left-1/2 flex h-[2em] w-[2em] -translate-x-1/2 -translate-y-1/2 items-center justify-center overflow-hidden rounded-[1.5em] border-[1px] bg-teal-600 backdrop-blur-[3px] duration-[500ms] hover:h-[10em] hover:w-[14em] hover:rounded-[1.5em] dark:bg-blue-600 md:top-8"
+          >
             <svg
               class="h-[1em] w-[1em] duration-300 group-hover:opacity-0"
               viewBox="0 0 48 48"
@@ -160,8 +177,7 @@ const { title, subTitle,} = Astro.props;
                   clip-rule="evenodd"
                   d="M21.6 36h4.8V21.6h-4.8V36ZM24 0C10.8 0 0 10.8 0 24s10.8 24 24 24 24-10.8 24-24S37.2 0 24 0Zm0 43.2C13.44 43.2 4.8 34.56 4.8 24 4.8 13.44 13.44 4.8 24 4.8c10.56 0 19.2 8.64 19.2 19.2 0 10.56-8.64 19.2-19.2 19.2Zm-2.4-26.4h4.8V12h-4.8v4.8Z"
                   fill-rule="evenodd"
-                  fill="#fff"
-                ></path>
+                  fill="#fff"></path>
               </g>
               <defs>
                 <clipPath id="a">
@@ -169,21 +185,34 @@ const { title, subTitle,} = Astro.props;
                 </clipPath>
               </defs>
             </svg>
-            <div class="items-left absolute left-0 top-0 flex h-auto w-full translate-y-[20%] flex-col justify-center p-3 font-poppins text-neutral-100 dark:text-neutral-100 group-hover:translate-y-0">
+            <div
+              class="items-left font-poppins absolute left-0 top-0 flex h-auto w-full translate-y-[20%] flex-col justify-center p-3 text-neutral-100 group-hover:translate-y-0 dark:text-neutral-100"
+            >
               <div class="items-left flex flex-col justify-center">
                 <p class="text-[0.9em] font-light">
-                  As an established dealer in Dubai, we are proud to offer Uniarch comprehensive range of surveillance solutions. Specializing in innovative, cost-effective security products
+                  As an established dealer in Dubai, we are proud to offer
+                  Uniarch comprehensive range of surveillance solutions.
+                  Specializing in innovative, cost-effective security products
                 </p>
               </div>
             </div>
           </div>
-         
+
           <a href="/uniarch">
-          <img src="/pictures/uni.png" alt="hero-image" class=" w-full h-auto bg-cover text-end" title="Learn more about Uniarch"></a>
-
+            <img
+              src="/pictures/uniarch1.png"
+              alt="hero-image"
+              class="h-auto w-full bg-cover text-end"
+              title="Learn more about Uniarch"
+            /></a
+          >
         </div>
-        <div class="relative flex h-[10em] w-[17em] md:w-[17em] items-center justify-center rounded-[1.5em] border-[1px] border-neutral-700 bg-white dark:bg-neutral-600 p-[1.5em] text-lime-300">
-          <div class="group absolute left-1/2 bottom-0 md:top-8 flex h-[2em] w-[2em] -translate-x-1/2 -translate-y-1/2 items-center justify-center overflow-hidden rounded-[1.5em] border-[1px] bg-teal-600 dark:bg-blue-600 backdrop-blur-[3px] duration-[500ms] hover:h-[10em] hover:w-[14em] hover:rounded-[1.5em]">
+        <div
+          class="text-lime-300 relative flex h-[10em] w-[17em] items-center justify-center rounded-[1.5em] border-[1px] border-neutral-700 bg-white p-[1.5em] dark:bg-neutral-600 md:w-[17em]"
+        >
+          <div
+            class="group absolute bottom-0 left-1/2 flex h-[2em] w-[2em] -translate-x-1/2 -translate-y-1/2 items-center justify-center overflow-hidden rounded-[1.5em] border-[1px] bg-teal-600 backdrop-blur-[3px] duration-[500ms] hover:h-[10em] hover:w-[14em] hover:rounded-[1.5em] dark:bg-blue-600 md:top-8"
+          >
             <svg
               class="h-[1em] w-[1em] duration-300 group-hover:opacity-0"
               viewBox="0 0 48 48"
@@ -197,8 +226,7 @@ const { title, subTitle,} = Astro.props;
                   clip-rule="evenodd"
                   d="M21.6 36h4.8V21.6h-4.8V36ZM24 0C10.8 0 0 10.8 0 24s10.8 24 24 24 24-10.8 24-24S37.2 0 24 0Zm0 43.2C13.44 43.2 4.8 34.56 4.8 24 4.8 13.44 13.44 4.8 24 4.8c10.56 0 19.2 8.64 19.2 19.2 0 10.56-8.64 19.2-19.2 19.2Zm-2.4-26.4h4.8V12h-4.8v4.8Z"
                   fill-rule="evenodd"
-                  fill="#fff"
-                ></path>
+                  fill="#fff"></path>
               </g>
               <defs>
                 <clipPath id="a">
@@ -206,64 +234,65 @@ const { title, subTitle,} = Astro.props;
                 </clipPath>
               </defs>
             </svg>
-            <div class="items-left absolute left-0 top-0 flex h-auto w-full translate-y-[20%] flex-col justify-center p-3 font-poppins text-neutral-100 dark:text-neutral-100 group-hover:translate-y-0">
+            <div
+              class="items-left font-poppins absolute left-0 top-0 flex h-auto w-full translate-y-[20%] flex-col justify-center p-3 text-neutral-100 group-hover:translate-y-0 dark:text-neutral-100"
+            >
               <div class="items-left flex flex-col justify-center">
                 <p class="text-[0.9em] font-light">
-                  We are an authorized distributor of UNV (Uniview), one of the top global manufacturers of video surveillance solutions. As an official distributor, we offer a wide selection of UNV products
+                  We are an authorized distributor of UNV (Uniview), one of the
+                  top global manufacturers of video surveillance solutions. As
+                  an official distributor, we offer a wide selection of UNV
+                  products
                 </p>
               </div>
             </div>
           </div>
-         
-          <a href="/unv" >
-          <img src="/pictures/brandunv.png" alt="hero-image" class="w-full h-auto bg-cover" title="Learn more about Uniview Technology"></a>
-       
-        </div>
 
+          <a href="/unv">
+            <img
+              src="/pictures/brandunv.png"
+              alt="hero-image"
+              class="h-auto w-full bg-cover"
+              title="Learn more about Uniview Technology"
+            /></a
+          >
+        </div>
       </div>
     </div>
   </div>
 
-
-
-
-
-
-
-
   <style>
-    .autoBLur{
-    animation: autoBLurAnimation linear both;
-    animation-timeline: view();
+    .autoBLur {
+      animation: autoBLurAnimation linear both;
+      animation-timeline: view();
     }
-    @keyframes autoBLurAnimation{
-        0%{
-            filter: blur(40px);
-        }
-        45%, 55%{
-            filter: blur(0px);
-        }
-        100%{
-            filter: blur(40px);
-        }
-    }
-
-
-    .autoShow{
-    animation: autoShowAnimation both;
-    animation-timeline: view(70% 5%);
-
+    @keyframes autoBLurAnimation {
+      0% {
+        filter: blur(40px);
+      }
+      45%,
+      55% {
+        filter: blur(0px);
+      }
+      100% {
+        filter: blur(40px);
+      }
     }
 
-    @keyframes autoShowAnimation{
-    from{
+    .autoShow {
+      animation: autoShowAnimation both;
+      animation-timeline: view(70% 5%);
+    }
+
+    @keyframes autoShowAnimation {
+      from {
         opacity: 0;
         transform: translateY(200px) scale(0.3);
-    }to{
+      }
+      to {
         opacity: 1;
         transform: translateY(0) scale(1);
+      }
     }
-    }   
-    
   </style>
 </section>
